--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ hs_err_pid*
 /PhraseOMatic/dist/
 /Test/nbproject/private/
 /Test/build/
+/Shuffle1/nbproject/private/
+/Shuffle1/build/
+/Shuffle1/dist/
+/PoolPuzzleOne/nbproject/private/
