--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ hs_err_pid*
 /Shuffle1/dist/
 /PoolPuzzleOne/nbproject/private/
 /PoolPuzzleOne/build/
+/DrumKit/nbproject/private/
+/DrumKitTestDrive/nbproject/private/
+/DrumKitTestDrive/build/
