--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ hs_err_pid*
 /DrumKit/nbproject/private/
 /DrumKitTestDrive/nbproject/private/
 /DrumKitTestDrive/build/
+/EchoTestDrive/nbproject/private/
+/EchoTestDrive/build/
