--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ hs_err_pid*
 /DrumKitTestDrive/build/
 /EchoTestDrive/nbproject/private/
 /EchoTestDrive/build/
+/Dog/nbproject/private/
+/Dog/build/
